--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "body-parser": "^1.14.2",
     "bson": ">=1.0.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.8",
     "express": "^4.21.1",
-    "mongodb": "^3.7.4",
+    "mongodb": "^3.3.4",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1"
   },
